# BridgeStack

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  database.py
app/models/: geography.py  indicators.py  policies.py  sectors.py  tools.py
app/routes/: geography.py  indicators.py  policies.py  sectors.py  tools.py
app/schemas/: geography.py  indicators.py  policies.py  sectors.py  tools.py
docs/: README.md  api-reference.md  architecture.md  configuration.md  deployment.md  getting-started.md
tests/: conftest.py  test_api.py
