[project]
name = "bridgestack"
version = "0.3.0"
description = "API backend bridging OpenStacks data layers using FastAPI and SQLite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Varna Sri Raman", email = "hello@impactmojo.in"},
]
keywords = ["fastapi", "rest-api", "development-data", "openstacks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.40",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://openstacks.dev"
Repository = "https://github.com/Varnasr/BridgeStack"
Documentation = "https://github.com/Varnasr/BridgeStack/tree/main/docs"
Issues = "https://github.com/Varnasr/BridgeStack/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"app/routes/*.py" = ["B008"]  # Depends() in defaults is standard FastAPI

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests that require database fixtures",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
